<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Prezkusovak</string>
    <string name="message">Uroven </string>
    <string name="message2">Slovicka </string>
    <string name="message3">Procvicuj </string>
    <string name="uroven">Uroven</string>
    <string name="slovicka">Slovicka</string>
    <string name="procvicuj">Procvicuj</string>
    <string name="radio_A1">A1 (1200 slovicek) </string>
    <string name="radio_B1">B1 (5600 slovicek)</string>
    <string name="radio_C1">C1 (10800 slovicek)</string>
    <string name="btn_display">Ulozit</string>
</resources>
