<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#58a92e"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textSize="25sp"/>
    <RadioGroup
        android:id="@+id/radioSlovicka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioA1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_A1"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioB1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_B1" />

        <RadioButton
            android:id="@+id/radioC1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_C1" />

    </RadioGroup>

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_display" />
</LinearLayout>